@@ -1,3 +1,7 @@
+2009-01-14  Gabor Csardi  <csardi@szaffi>
+
+	* src/arpack.c (igraph_arpack_eigen_graph) : added
+
 2009-01-04  Gabor Csardi  <csardi@szaffi>
 
 	* src/scg.c (igraph_scg_semi_projectors) : bugs corrected for 
